# gru

./: CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml  requirements.txt
.claude/: settings.local.json
docs/: commands.md  ralph.md
src/gru/: claude.py  cli.py  config.py  db.py  discord_bot.py  main.py  mcp.py  orchestrator.py  scheduler.py  schema.sql  slack_bot.py  telegram_bot.py  worktree.py
tests/: test_claude.py  test_cli.py  test_discord_bot.py  test_integration.py  test_mcp.py  test_orchestrator.py  test_ralph.py  test_scheduler.py  test_slack_bot.py  test_telegram_bot.py  test_webhook.py  test_worktree.py
